==> I-SYST/EHAL/ARM/Nordic/src/i2c_nrf5x.cpp <==
#include "nrf.h"
#include "istddef.h"
#include "coredev/i2c.h"
#include "iopinctrl.h"
#include "idelay.h"
#include "i2c_spi_nrf5x_irq.h"
#define NRF5X_I2C_MAXDEV        2
#define NRF5X_I2CSLAVE_MAXDEV	2
#define NRF52_I2C_DMA_MAXCNT    65535
#define NRF52_I2C_DMA_MAXCNT    255
#define NRF5X_I2CSLAVE_MAXDEV	0
#define NRF5X_I2C_TRBUFF_SIZE	4

void nRF5xI2CDisable(DEVINTRF * const pDev)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

	dev->pReg->ENABLE = (TWI_ENABLE_ENABLE_Disabled << TWI_ENABLE_ENABLE_Pos);
}

void nRF5xI2CEnable(DEVINTRF * const pDev)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

#ifdef NRF52_SERIES
    if (dev->pI2cDev->DevIntrf.bDma)
    {
		if (dev->pI2cDev->Mode == I2CMODE_SLAVE)
		{
			dev->pReg->ENABLE = (TWIS_ENABLE_ENABLE_Enabled << TWIS_ENABLE_ENABLE_Pos);
		}
		else
		{
			dev->pReg->ENABLE = (TWIM_ENABLE_ENABLE_Enabled << TWIM_ENABLE_ENABLE_Pos);
		}
    }
    else
#endif
	{
    	dev->pReg->ENABLE = (TWI_ENABLE_ENABLE_Enabled << TWI_ENABLE_ENABLE_Pos);
    }
}

int nRF5xI2CGetRate(DEVINTRF * const pDev)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

	return dev->pI2cDev->Rate;
}

int nRF5xI2CSetRate(DEVINTRF * const pDev, int RateHz)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

	if (RateHz < 250000)
	{
		dev->pReg->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K100;
		dev->pI2cDev->Rate = 100000;
	}
	else if (RateHz < 400000)
	{
		dev->pReg->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K250;
		dev->pI2cDev->Rate = 250000;
	}
	else
	{
		dev->pReg->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K400;
		dev->pI2cDev->Rate = 400000;
	}

	return dev->pI2cDev->Rate;
}

bool nRF5xI2CStartRx(DEVINTRF * const pDev, int DevAddr)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

	dev->pReg->ADDRESS = DevAddr;
	dev->pReg->INTENCLR = 0xFFFFFFFF;
	return true;
}

int nRF5xI2CRxData(DEVINTRF *pDev, uint8_t *pBuff, int BuffLen)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;
	int cnt = 0;

	if (pBuff == NULL || BuffLen <= 0)
	{
		return 0;
	}

	dev->pReg->EVENTS_STOPPED = 0;
	dev->pReg->TASKS_STARTRX = 1;

	while (BuffLen > 0)
	{
		if (nRF5xI2CWaitRxComplete(dev, 100000) == false)
		{
			break;
		}

		*pBuff = dev->pReg->RXD;

		BuffLen--;
		pBuff++;
		cnt++;
	}

	return cnt;
}

void nRF5xI2CStopRx(DEVINTRF * const pDev)
{
    NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;
    dev->pReg->TASKS_RESUME = 1;
    dev->pReg->TASKS_STOP = 1;

    if (dev->pI2cDev->DevIntrf.bDma == false)
    {
        // must read dummy last byte to generate NACK & STOP condition
    	nRF5xI2CWaitRxComplete(dev, 100000);
    	uint8_t d __attribute__((unused)) = dev->pReg->RXD;
    }
    nRF5xI2CWaitStop(dev, 1000);
}

bool nRF5xI2CStartTx(DEVINTRF * const pDev, int DevAddr)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

	dev->pReg->ADDRESS = DevAddr;
	dev->pReg->INTENCLR = 0xFFFFFFFF;

	return true;
}

int nRF5xI2CTxData(DEVINTRF * const pDev, uint8_t *pData, int DataLen)
{
	NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;
	uint32_t d;
	int cnt = 0;

	dev->pReg->TASKS_STARTTX = 1;

	while (DataLen > 0)
	{
		dev->pReg->TXD = *pData;

		if (nRF5xI2CWaitTxComplete(dev, 10000) == false)
		{
			break;
		}

		DataLen--;
		pData++;
		cnt++;
	}
	return cnt;
}

void nRF5xI2CStopTx(DEVINTRF * const pDev)
{
    NRF5X_I2CDEV *dev = (NRF5X_I2CDEV*)pDev->pDevData;

#ifdef NRF52_SERIES
    if (dev->pI2cDev->DevIntrf.bDma)
    {
		if (dev->pDmaReg->EVENTS_LASTTX == 1)
		{
			dev->pDmaReg->EVENTS_LASTTX = 0;
		}
    }
#endif
	dev->pReg->EVENTS_SUSPENDED = 0;
	dev->pReg->TASKS_RESUME = 1;
    dev->pReg->TASKS_STOP = 1;
    nRF5xI2CWaitStop(dev, 1000);
}

bool I2CInit(I2CDEV * const pDev, const I2CCFG *pCfgData)
{
	if (pDev == NULL || pCfgData == NULL)
	{
		return false;
	}

    if (pCfgData->Mode == I2CMODE_SLAVE && pCfgData->DevNo >= NRF5X_I2CSLAVE_MAXDEV)
    {
    	return false;
    }

    if (pCfgData->DevNo < 0 || pCfgData->DevNo >= NRF5X_I2C_MAXDEV)
	{
		return false;
	}

	// Get the correct register map
#ifdef NRF52_SERIES
	NRF_TWIM_Type *reg = s_nRF5xI2CDev[pCfgData->DevNo].pDmaReg;
#else
	NRF_TWI_Type *reg = s_nRF5xI2CDev[pCfgData->DevNo].pReg;
#endif

	// Force power on in case it was powered off previously
	*(volatile uint32_t *)((uint32_t)s_nRF5xI2CDev[pCfgData->DevNo].pReg + 0xFFC);
	*(volatile uint32_t *)((uint32_t)s_nRF5xI2CDev[pCfgData->DevNo].pReg + 0xFFC) = 1;

	memcpy(pDev->Pins, pCfgData->Pins, sizeof(IOPINCFG) * I2C_MAX_NB_IOPIN);

	// Configure I/O pins
	IOPinCfg(pCfgData->Pins, I2C_MAX_NB_IOPIN);
    IOPinSet(pCfgData->Pins[I2C_SDA_IOPIN_IDX].PortNo, pCfgData->Pins[I2C_SDA_IOPIN_IDX].PinNo);
    IOPinSet(pCfgData->Pins[I2C_SCL_IOPIN_IDX].PortNo, pCfgData->Pins[I2C_SCL_IOPIN_IDX].PinNo);

#ifdef NRF52_SERIES
    reg->PSEL.SCL = (pCfgData->Pins[I2C_SCL_IOPIN_IDX].PinNo & 0x1f) | (pCfgData->Pins[I2C_SCL_IOPIN_IDX].PortNo << 5);
    reg->PSEL.SDA = (pCfgData->Pins[I2C_SDA_IOPIN_IDX].PinNo & 0x1f) | (pCfgData->Pins[I2C_SDA_IOPIN_IDX].PortNo << 5);
#else
    reg->PSELSCL = (pCfgData->Pins[I2C_SCL_IOPIN_IDX].PinNo & 0x1f);
    reg->PSELSDA = (pCfgData->Pins[I2C_SDA_IOPIN_IDX].PinNo & 0x1f);
#endif
    //pDev->DevIntrf.MaxRetry = pCfgData->MaxRetry;
    pDev->Mode = pCfgData->Mode;

	s_nRF5xI2CDev[pCfgData->DevNo].pI2cDev  = pDev;
	pDev->DevIntrf.pDevData = (void*)&s_nRF5xI2CDev[pCfgData->DevNo];


	nRF5xI2CSetRate(&pDev->DevIntrf, pCfgData->Rate);

	pDev->DevIntrf.EnCnt = 1;
	pDev->DevIntrf.Type = DEVINTRF_TYPE_I2C;
	pDev->DevIntrf.bDma = pCfgData->bDmaEn;
	pDev->DevIntrf.Disable = nRF5xI2CDisable;
	pDev->DevIntrf.Enable = nRF5xI2CEnable;
	pDev->DevIntrf.PowerOff = nRF5xI2CPowerOff;
	pDev->DevIntrf.GetRate = nRF5xI2CGetRate;
	pDev->DevIntrf.SetRate = nRF5xI2CSetRate;
	pDev->DevIntrf.StartRx = nRF5xI2CStartRx;
	pDev->DevIntrf.StopRx = nRF5xI2CStopRx;
	pDev->DevIntrf.StartTx = nRF5xI2CStartTx;

	if (pDev->DevIntrf.bDma)
	{
		pDev->DevIntrf.RxData = nRF5xI2CRxDataDMA;
		pDev->DevIntrf.TxData = nRF5xI2CTxDataDMA;
	}
	else
	{
		pDev->DevIntrf.RxData = nRF5xI2CRxData;
		pDev->DevIntrf.TxData = nRF5xI2CTxData;
	}
	pDev->DevIntrf.StopTx = nRF5xI2CStopTx;
	pDev->DevIntrf.Reset = nRF5xI2CReset;
	pDev->DevIntrf.IntPrio = pCfgData->IntPrio;
	pDev->DevIntrf.EvtCB = pCfgData->EvtCB;
	pDev->DevIntrf.MaxRetry = pCfgData->MaxRetry;
	atomic_flag_clear(&pDev->DevIntrf.bBusy);

	reg->SHORTS = 0;

	// Clear all errors
    if (reg->EVENTS_ERROR)
    {
        reg->ERRORSRC = reg->ERRORSRC;
        reg->EVENTS_ERROR = 0;
        reg->TASKS_RESUME = 1;
        reg->TASKS_STOP = 1;
    }

    usDelay(1000);

#ifdef NRF52_SERIES
    reg->EVENTS_LASTRX = 0;
    reg->EVENTS_LASTTX = 0;
    reg->EVENTS_RXSTARTED = 0;
    reg->EVENTS_TXSTARTED = 0;
#endif
    reg->EVENTS_SUSPENDED = 0;
    reg->EVENTS_STOPPED = 0;

    uint32_t enval = (TWI_ENABLE_ENABLE_Enabled << TWI_ENABLE_ENABLE_Pos);
    uint32_t inten = 0;

#ifdef NRF52_SERIES
    if (pDev->DevIntrf.bDma)
    {
    	enval = (TWIM_ENABLE_ENABLE_Enabled << TWIM_ENABLE_ENABLE_Pos);
    }

    if (pCfgData->Mode == I2CMODE_SLAVE)
    {
    	NRF_TWIS_Type *sreg = s_nRF5xI2CDev[pCfgData->DevNo].pDmaSReg;
        pDev->NbSlaveAddr = min(pCfgData->NbSlaveAddr, NRF5X_I2CSLAVE_MAXDEV);

        sreg->CONFIG = 0;
        sreg->ORC = 0xff;

        for (int i = 0; i < pDev->NbSlaveAddr; i++)
        {
        	pDev->SlaveAddr[i] = pCfgData->SlaveAddr[i];
        	sreg->ADDRESS[i] = (uint32_t)pCfgData->SlaveAddr[i];
        	if (pDev->SlaveAddr[i] != 0)
        	{
        		sreg->CONFIG |= 1<<i;
        	}
        }

		sreg->SHORTS = TWIS_SHORTS_READ_SUSPEND_Msk | TWIS_SHORTS_WRITE_SUSPEND_Msk;
        sreg->EVENTS_READ = 0;
        sreg->EVENTS_WRITE = 0;
        enval = TWIS_ENABLE_ENABLE_Enabled << TWIS_ENABLE_ENABLE_Pos;
        inten = (TWIS_INTEN_READ_Enabled << TWIS_INTEN_READ_Pos) | (TWIS_INTEN_WRITE_Enabled << TWIS_INTEN_WRITE_Pos) |
        		(TWIS_INTEN_STOPPED_Enabled << TWIS_INTEN_STOPPED_Pos);
    }

    if (pCfgData->bIntEn)
    {
    	SetI2cSpiIntHandler(pCfgData->DevNo, &pDev->DevIntrf, I2CIrqHandler);

    	if (pCfgData->DevNo == 0)
    	{
    		NVIC_ClearPendingIRQ(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn);
    		NVIC_SetPriority(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn, pCfgData->IntPrio);
    		NVIC_EnableIRQ(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn);
    	}
    	else
    	{
    		NVIC_ClearPendingIRQ(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn);
    		NVIC_SetPriority(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn, pCfgData->IntPrio);
    		NVIC_EnableIRQ(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn);
    	}

    	reg->INTENSET = inten;
    }
#endif

    reg->ENABLE = enval;

	return true;
}
